<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hahago.com.hahagotest.MainActivity"
    android:orientation="vertical"
    android:background="#38465e">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="#a3a3a3"
        app:tabTextAppearance="@style/WhiteWord"
        android:background="#FFFFFF">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talks"/>

    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/board_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:srcCompat="@drawable/home"
                android:padding="4dp"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_home"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="12dp"
                />

        </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:srcCompat="@drawable/board"
            android:padding="4dp"
            android:scaleType="fitCenter"/>
        <TextView
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_dashboard"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/locat"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:srcCompat="@drawable/locat"
                android:padding="4dp"
                android:scaleType="fitCenter"/>
            <TextView
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_discovery"
                android:textColor="#FFFFFF"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bell"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:srcCompat="@drawable/bell"
                android:padding="4dp"
                android:scaleType="fitCenter"/>
            <TextView
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_notifications"
                android:textColor="#FFFFFF"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:srcCompat="@drawable/list"
                android:padding="4dp"
                android:scaleType="fitCenter"/>
            <TextView
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_more"
                android:textColor="#FFFFFF"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>




    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--app:menu="@menu/navigation" />-->


</LinearLayout>
